src/qmlcompiler/qqmljsimportvisitor_p.h
@@ -305,8 +305,6 @@ protected:
     void processPropertyBindingObjects();
     void flushPendingSignalParameters();
 
-    QQmlJSScope::ConstPtr scopeById(const QString &id, const QQmlJSScope::ConstPtr &current);
-
     void breakInheritanceCycles(const QQmlJSScope::Ptr &scope);
     void checkDeprecation(const QQmlJSScope::ConstPtr &scope);
     void checkGroupedAndAttachedScopes(QQmlJSScope::ConstPtr scope);
