src/qmlcompiler/qqmljstyperesolver.cpp
@@ -1050,22 +1050,6 @@ QQmlJSScope::ConstPtr QQmlJSTypeResolver::resolveParentProperty(
 
 /*!
  * \internal
- * We can generally determine the relevant component boundaries for each scope. However,
- * if the scope or any of its parents is assigned to a property of which we cannot see the
- * type, we don't know whether the type of that property happens to be Component. In that
- * case, we can't say.
- */
-bool QQmlJSTypeResolver::canFindComponentBoundaries(const QQmlJSScope::ConstPtr &scope) const
-{
-    for (QQmlJSScope::ConstPtr parent = scope; parent; parent = parent->parentScope()) {
-        if (parent->isAssignedToUnknownProperty())
-            return false;
-    }
-    return true;
-}
-
-/*!
- * \internal
  *
  * Retrieves the type of whatever \a name signifies in the given \a scope.
  * \a name can be an ID, a property of the scope, a singleton, an attachment,
@@ -1098,11 +1082,17 @@ QQmlJSScope::ConstPtr QQmlJSTypeResolver::scopedType(
         const QQmlJSScope::ConstPtr &scope, const QString &name,
         QQmlJSScopesByIdOptions options) const
 {
-    if (!canFindComponentBoundaries(scope))
+    QQmlJSScopesById::CertainCallback<QQmlJSScope::ConstPtr> identified;
+    if (m_objectsById.possibleScopes(name, scope, options, identified)
+            != QQmlJSScopesById::Success::Yes) {
+        // Could not determine component boundaries
         return {};
+    }
 
-    if (QQmlJSScope::ConstPtr identified = m_objectsById.scope(name, scope, options))
-        return identified;
+    if (identified.result) {
+        // Found a definite match
+        return identified.result;
+    }
 
     if (QQmlJSScope::ConstPtr base = QQmlJSScope::findCurrentQMLScope(scope)) {
         QQmlJSScope::ConstPtr result;
@@ -1160,12 +1150,18 @@ QQmlJSRegisterContent QQmlJSTypeResolver::scopedType(QQmlJSRegisterContent scope
                                                      QQmlJSScopesByIdOptions options) const
 {
     const QQmlJSScope::ConstPtr contained = scope.containedType();
-    if (!canFindComponentBoundaries(contained))
-        return {};
 
-    if (QQmlJSScope::ConstPtr identified = m_objectsById.scope(name, contained, options)) {
+    QQmlJSScopesById::CertainCallback<QQmlJSScope::ConstPtr> identified;
+    if (m_objectsById.possibleScopes(name, contained, options, identified)
+            != QQmlJSScopesById::Success::Yes) {
+        // Could not determine component boundaries
+        return {};
+    }
+
+    if (identified.result) {
+        // Found a definite match
         return m_pool->createType(
-                identified, lookupIndex, QQmlJSRegisterContent::ObjectById, scope);
+                identified.result, lookupIndex, QQmlJSRegisterContent::ObjectById, scope);
     }
 
     if (QQmlJSScope::ConstPtr base = QQmlJSScope::findCurrentQMLScope(contained)) {
